--- a/tempmail/core/templates/core/parciais/_editModal.html
+++ b/tempmail/core/templates/core/parciais/_editModal.html
@@ -11,7 +11,7 @@
                 <input type="text" id="modalInputUser"
                     class="appearance-none bg-transparent border-none w-full text-gray-700 dark:text-white py-3 px-4 leading-tight focus:outline-none"
                     placeholder="ex: usuario123">
-                <div
+                <div id="modalDomainLabel"
                     class="bg-gray-200 dark:bg-gray-600 text-gray-500 dark:text-gray-300 px-3 py-3 border-l border-gray-300 dark:border-gray-500 text-sm">
                     @icousd.com</div>
             </div>
