melhorias de intercao do usuario

--- a/tempmail/core/templates/core/index.html
+++ b/tempmail/core/templates/core/index.html
@@ -203,8 +203,7 @@
                         </div>
                         <div
                             class="flex items-center gap-2 bg-gray-50 dark:bg-gray-800 px-3 py-1.5 rounded-md border border-gray-100 dark:border-gray-700">
-                            <span data-time="10"
-                                class="js-timer font-mono font-bold text-orange-600 dark:text-orange-400 w-[35px] text-center inline-block">
+                            <span class="js-timer font-mono font-bold text-orange-600 dark:text-orange-400 w-[35px] text-center inline-block">
                                 10s
                             </span>
                             <i class="fa-solid fa-circle-notch animate-spin text-orange-600 text-[15px]"></i>
