--- a/tempmail/templates/parciais/_head.html
+++ b/tempmail/templates/parciais/_head.html
@@ -27,6 +27,7 @@
 <link rel="stylesheet" href="{% static 'vendor/font-awesome/font-awesome-7.0.1-all.min.css' %}">
 <script src="{% static 'vendor/qr-code-styling/qr-code-styling-1.9.2.min.js' %}"></script>
 <script src="{% static 'vendor/dompurify/dompurify-3.2.7.min.js' %}"></script>
+<script src="{% static 'vendor/htmx/htmx-2.0.8.min.js' %}"></script>
 
 <script>
     tailwind.config = {
