--- a/tempmail/core/templates/core/dados.html
+++ b/tempmail/core/templates/core/dados.html
@@ -11,7 +11,7 @@
                 Dashboard Administrativo
             </h1>
             <p class="text-gray-600 dark:text-gray-400">
-                Estatísticas e métricas do sistema TempMail
+                Estatísticas e métricas do sistema EmailRush
             </p>
         </div>
 
