Atualiza estilo do nome "SMSRush" na página inicial, aplicando nova cor e efeito de sombra para melhor visibilidade.

--- a/tempmail/core/templates/core/index.html
+++ b/tempmail/core/templates/core/index.html
@@ -387,7 +387,7 @@
 
                     <!-- Nome SMSRush -->
                     <div class="text-2xl font-bold font-inter">
-                        <span class="text-orange-600">SMS</span><span class="text-white">Rush</span>
+                        <span class="text-[#f97316] [filter:drop-shadow(0_2px_4px_rgba(249,115,22,0.4))]">SMS</span><span class="text-white">Rush</span>
                     </div>
                 </div>
 
